update some config

--- a/public/new_page.html
+++ b/public/new_page.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Getting Started Extension's Popup</title>
+    <!-- <link rel="stylesheet" type="text/css" href="js/simplemde.min.css">
+    <link rel="stylesheet" type="text/css" href="js/detail.css"> -->
     <script src="js/vendor.js"></script>
   </head>
   <body>
